[package]
name = "pnft_transfer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pnft_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features = ["init-if-needed"] }
mpl-token-metadata = { version="1.7.0", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.0.0"
anchor-spl = "0.26.0"
thiserror = "1.0.30"
